.jar upload